Moved auth logic to auth_utils.js and updated HTML references

--- a/frontend/account.html
+++ b/frontend/account.html
@@ -7,6 +7,9 @@
     <title>My Account - Ultramarathon Finder</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css">
+
+    <!-- 🔐 Load global login/session logic -->
+    <script src="auth_utils.js" defer></script>
 </head>
 
 <body class="forum-page">
