--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,6 +7,9 @@
     <title>Login - Ultramarathon Connect</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+    <!-- 🔐 Load global login/session logic -->
+    <script src="auth_utils.js" defer></script>
 </head>
 
 <body class="forum-page">
