--- a/frontend/termsofservice.html
+++ b/frontend/termsofservice.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - Ultramarathon Connect</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- 🔐 Load global login/session logic -->
+    <script src="auth_utils.js" defer></script>
 </head>
 
 <body class="forum-page">
