--- a/frontend/articles.html
+++ b/frontend/articles.html
@@ -7,6 +7,9 @@
     <title>All Articles - Ultramarathon Connect</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="ultra_favicon.ico" type="image/x-icon" />
+
+    <!-- 🔐 Load global login/session logic -->
+    <script src="auth_utils.js" defer></script>
 </head>
 
 <body class="forum-page">
