--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>Contact Us - Ultramarathon Connect</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- 🔐 Load global login/session logic -->
+    <script src="auth_utils.js" defer></script>
 </head>
 
 <body class="forum-page">
