--- a/frontend/forum/group_forum.html
+++ b/frontend/forum/group_forum.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/alanai_chatbot/chat-widget.css" />
     <script defer src="/forum/group_forum.js"></script>
+
+    <!-- 🔐 Load global login/session logic -->
+    <script src="../auth_utils.js" defer></script>
 </head>
 
 <body class="forum-page">
