Add inline editing and reply enhancements to forum and group pages

--- a/frontend/forum/category.html
+++ b/frontend/forum/category.html
@@ -51,6 +51,7 @@
         </section>
 
         <div id="posts-container"></div>
+        <div id="pagination-container" class="pagination"></div>
     </main>
 
     <!-- Alan Chat -->
