--- a/frontend/forum/forum.html
+++ b/frontend/forum/forum.html
@@ -41,32 +41,33 @@
         <p class="forum-subheading">Ask questions, share insights, and connect with ultrarunners around the world.</p>
 
         <section class="forum-categories">
-            <a href="/forum/category.html?topic=Training%20Tips" class="category-card">
+            <a href="/forum/category.html?topic=Training%20Tips" class="category-card" data-topic="Training Tips">
                 <span class="emoji">🏋️</span>
                 <h3>Training Tips</h3>
                 <p>Strategies, plans, and advice from seasoned runners.</p>
             </a>
-            <a href="/forum/category.html?topic=Gear%20Recommendations" class="category-card">
+            <a href="/forum/category.html?topic=Gear%20Recommendations" class="category-card"
+                data-topic="Gear Recommendations">
                 <span class="emoji">🎒</span>
                 <h3>Gear Recommendations</h3>
                 <p>Discuss your favorite gear for trails, races, and recovery.</p>
             </a>
-            <a href="/forum/category.html?topic=Race%20Advice" class="category-card">
+            <a href="/forum/category.html?topic=Race%20Advice" class="category-card" data-topic="Race Advice">
                 <span class="emoji">🥇</span>
                 <h3>Race Advice</h3>
                 <p>Tips on race strategy, pacing, and preparation.</p>
             </a>
-            <a href="/forum/category.html?topic=Nutrition%20Tips" class="category-card">
+            <a href="/forum/category.html?topic=Nutrition%20Tips" class="category-card" data-topic="Nutrition Tips">
                 <span class="emoji">🥗</span>
                 <h3>Nutrition Tips</h3>
                 <p>Talk about fueling, hydration, and supplements.</p>
             </a>
-            <a href="/forum/category.html?topic=Meetup%20Requests" class="category-card">
+            <a href="/forum/category.html?topic=Meetup%20Requests" class="category-card" data-topic="Meetup Requests">
                 <span class="emoji">🤝</span>
                 <h3>Meetup Requests</h3>
                 <p>Looking to find a training buddy or local group? Post here.</p>
             </a>
-            <a href="/forum/category.html?topic=General%20Chat" class="category-card">
+            <a href="/forum/category.html?topic=General%20Chat" class="category-card" data-topic="General Chat">
                 <span class="emoji">💬</span>
                 <h3>General Chat</h3>
                 <p>Talk about anything ultrarunning related!</p>
