--- a/frontend/forum/group_forum.html
+++ b/frontend/forum/group_forum.html
@@ -67,7 +67,7 @@
         <div class="footer-links">
             <a href="/forum.html">Back to Forum</a> |
             <a href="/faq.html">FAQ</a> |
-            <a href="/privacy.html">Privacy Policy</a> |
+            <a href="/privacy.html">Privacy Policy</a>
         </div>
         <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
     </footer>
