Update index.html carousel to feature latest 6 articles through June 28–29

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,42 +127,49 @@
             <div class="carousel-container">
                 <button class="scroll-btn left" onclick="scrollCarousel(-1)">&#8592;</button>
                 <div class="article-carousel" id="articleCarousel">
+
                     <div class="article-card">
-                        <img src="images/ultra_jan4weekend.jpg" alt="Vista View 360 runners" />
-                        <h3>Ultra Recap: Jan 4–5</h3>
-                        <p>Three races kicked off the year — from Florida to West Virginia trails.</p>
-                        <a href="articles/ultra_weekend_jan4.html">Read More</a>
+                        <img src="images/ultra_jun28weekend.jpg" alt="Western States runners 2025" />
+                        <h3>Ultra Recap: June 28–29</h3>
+                        <p>Western States 100, Black Hills, and course records across North America.</p>
+                        <a href="articles/ultra_weekend_jun28.html">Read More</a>
                     </div>
+
                     <div class="article-card">
-                        <img src="images/ultra_jan11weekend.jpg" alt="Taiwan, No Hands Trail" />
-                        <h3>Ultra Recap: Jan 11–12</h3>
-                        <p>No Hands Trail, Miami, and Taiwan brought adventure in Week 2.</p>
-                        <a href="articles/ultra_weekend_jan11.html">Read More</a>
+                        <img src="images/ultra_jun21weekend.jpg" alt="Bighorn and Broken Arrow 2025" />
+                        <h3>Ultra Recap: June 21–22</h3>
+                        <p>Skyraces, thunderstorms, and summer ultras from Wyoming to Washington.</p>
+                        <a href="articles/ultra_weekend_jun21.html">Read More</a>
                     </div>
+
                     <div class="article-card">
-                        <img src="images/ultra_jan18weekend.jpg" alt="Coldwater Rumble" />
-                        <h3>Ultra Recap: Jan 18–19</h3>
-                        <p>Course records, snowfields, and epic performances this weekend.</p>
-                        <a href="articles/ultra_weekend_jan18.html">Read More</a>
+                        <img src="images/ultra_jun14weekend.jpg" alt="Mid-June ultras" />
+                        <h3>Ultra Recap: June 14–15</h3>
+                        <p>Coastal trails, European climbs, and record-breaking 24‑hour runs.</p>
+                        <a href="articles/ultra_weekend_jun14.html">Read More</a>
                     </div>
+
                     <div class="article-card">
-                        <img src="images/ultra_jan25weekend.jpg" alt="Mountain Mist 50K" />
-                        <h3>Ultra Recap: Jan 25–26</h3>
-                        <p>From Alabama to Australia — muddy trails and big mileage.</p>
-                        <a href="articles/ultra_weekend_jan25.html">Read More</a>
+                        <img src="images/ultra_jun8weekend.jpg" alt="Lake Sonoma and Utah mountain runs" />
+                        <h3>Ultra Recap: June 7–8</h3>
+                        <p>Lake Sonoma, North Fork, and mountain slogs kick off June’s second week.</p>
+                        <a href="articles/ultra_weekend_jun8.html">Read More</a>
                     </div>
+
                     <div class="article-card">
-                        <img src="images/ultra_feb1weekend.jpg" alt="Frozen Feb 50K" />
-                        <h3>Ultra Recap: Feb 1–2</h3>
-                        <p>Ice, snow, and survival at Arrowhead 135 and the Frozen Yeti.</p>
-                        <a href="articles/ultra_weekend_feb1.html">Read More</a>
+                        <img src="images/ultra_jun1weekend.jpg" alt="Early June ultramarathons" />
+                        <h3>Ultra Recap: June 1–2</h3>
+                        <p>Runners tackled heat and hills across summer’s opening weekend.</p>
+                        <a href="articles/ultra_weekend_jun1.html">Read More</a>
                     </div>
+
                     <div class="article-card">
-                        <img src="images/ultra_feb8weekend.jpg" alt="Redtail Ridge and Lone Cactus" />
-                        <h3>Ultra Recap: Feb 8–9</h3>
-                        <p>PRs on desert trails and snowy ridgelines marked this weekend.</p>
-                        <a href="articles/ultra_weekend_feb8.html">Read More</a>
+                        <img src="images/ultra_may31weekend.jpg" alt="End of May ultra events" />
+                        <h3>Ultra Recap: May 31–June 1</h3>
+                        <p>Closing out May with strong performances across the U.S. and beyond.</p>
+                        <a href="articles/ultra_weekend_may31.html">Read More</a>
                     </div>
+
                 </div>
                 <button class="scroll-btn right" onclick="scrollCarousel(1)">&#8594;</button>
             </div>
