Fix spacing for articles header and update article recaps for June 21 and June 28 weekends

--- a/frontend/articles.html
+++ b/frontend/articles.html
@@ -38,11 +38,25 @@
     </header>
 
     <main>
-        <section class="articles-section full-articles" style="padding-top: 140px;">
-            <h2>All Weekly Ultra Recaps</h2>
+        <section class="articles-section full-articles">
+            <h2 class="articles-header">All Weekly Ultra Recaps</h2>
             <div class="article-grid">
 
                 <!-- BEGIN ARTICLE CARDS (NEWEST TO OLDEST) -->
+                <div class="article-card">
+                    <img src="images/ultra_jun28weekend.jpg" alt="June 28–29" />
+                    <h3>Ultra Recap: June 28–29</h3>
+                    <p>From Western States to Black Hills — a landmark weekend of mountain miles and course records.</p>
+                    <a href="articles/ultra_weekend_jun28.html">Read More</a>
+                </div>
+
+                <div class="article-card">
+                    <img src="images/ultra_jun21weekend.jpg" alt="June 21–22" />
+                    <h3>Ultra Recap: June 21–22</h3>
+                    <p>Snow delays, sacred canyons, and fast alpine finishes filled this action-packed weekend.</p>
+                    <a href="articles/ultra_weekend_jun21.html">Read More</a>
+                </div>
+
                 <div class="article-card">
                     <img src="images/ultra_jun14weekend.jpg" alt="June 14–15" />
                     <h3>Ultra Recap: June 14–15</h3>
