🗺️ Add clickable chart modal with full ultra race details

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -115,6 +115,16 @@
     <script src="forum/inject_account_dropdown.js"></script>
     <script src="ultra_map_script.js"></script>
 
+    <!-- 🟢 Ultra Detail Modal -->
+    <div id="ultra-detail-modal" class="ultra-modal" style="display: none;">
+        <div class="ultra-modal-content">
+            <span class="ultra-modal-close" onclick="closeUltraModal()">&times;</span>
+            <div id="ultra-modal-body">
+                <!-- Race details will be injected here -->
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
