🗺️ Add Strava map embed to ultra modal for each race

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -119,6 +119,11 @@
             <p id="modal-distance">Distance</p>
             <p id="modal-description">Description</p>
 
+            <!-- Embedded Strava Map -->
+            <div id="modal-map" style="margin-top: 1.5rem;">
+                <!-- map iframe will be injected here -->
+            </div>
+
             <div id="modal-photos" class="photo-carousel"></div>
 
             <div id="notes-section" style="margin-top: 2rem;">
