Add polyline-based map preview to ultra detail modal

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -119,10 +119,8 @@
             <p id="modal-distance">Distance</p>
             <p id="modal-description">Description</p>
 
-            <!-- Embedded Strava Map -->
-            <div id="modal-map" style="margin-top: 1.5rem;">
-                <!-- map iframe will be injected here -->
-            </div>
+            <!-- Polyline Map Canvas -->
+            <div id="polyline-map" style="width: 100%; height: 300px; margin-top: 1.5rem; border-radius: 8px;"></div>
 
             <div id="modal-photos" class="photo-carousel"></div>
 
