--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -72,7 +72,9 @@
         <!-- 🕰️ Ultra Completion Timeline -->
         <section id="ultra-timeline-section" style="margin: 40px 20px;">
             <h2 class="chart-title">📈 Ultra Completion Timeline</h2>
-            <canvas id="ultraTimelineChart" width="100%" height="60"></canvas>
+            <div style="position: relative; z-index: 10;">
+                <canvas id="ultraTimelineChart" width="100%" height="60"></canvas>
+            </div>
         </section>
 
         <!-- 🖼️ Strava Photo Timeline -->
