Fix polyline map rendering by including Leaflet encoded polyline plugin

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -143,6 +143,7 @@
     </div>
 
     <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+    <script src="https://unpkg.com/leaflet-encoded-polyline/Polyline.encoded.js"></script>
     <script src="alanai_chatbot/alan.js"></script>
     <script src="forum/inject_account_dropdown.js"></script>
     <script src="ultra_map_script.js"></script>
