Switch to Mapbox polyline library for Strava map decoding

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -148,7 +148,7 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
     <!-- Load Leaflet Encoded Polyline Plugin right after Leaflet -->
-    <script src="https://unpkg.com/leaflet-encoded-polyline/Polyline.encoded.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mapbox/polyline@1.1.1/src/polyline.min.js"></script>
 
     <!-- Then MarkerCluster (optional plugin) -->
     <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
