➕ Add Articles tab to site header across all pages

--- a/frontend/account.html
+++ b/frontend/account.html
@@ -31,6 +31,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="race_directory.html">Race Directory</a></li>
                     <li><a href="forum.html">Runner Community</a></li>
+                    <li><a href="articles.html">Articles</a></li>
                 </ul>
             </nav>
         </div>
