--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -53,6 +53,7 @@
                 <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
             </div>
             <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
+            <button onclick="downloadUltraResume()" class="green-btn">📄 Download Résumé (PDF)</button>
         </section>
 
         <div id="ultra-map" style="height: 500px;"></div>
@@ -73,6 +74,25 @@
             <h2 class="chart-title">🖼️ My Ultra Photo Timeline</h2>
             <div id="photo-scroll-container" class="photo-scroll"></div>
         </section>
+
+        <!-- 📝 Hidden Résumé Content -->
+        <div id="ultra-resume-content" style="display:none; padding: 20px; font-family: sans-serif; max-width: 600px;">
+            <h2>Ultramarathon Résumé</h2>
+            <p><strong>Total Ultra Runs:</strong> <span id="resume-ultra-count"></span></p>
+            <p><strong>Total Distance:</strong> <span id="resume-ultra-distance"></span></p>
+            <p><strong>Longest Run:</strong> <span id="resume-longest-run"></span></p>
+            <p><strong>Unique Locations:</strong> <span id="resume-unique-locations"></span></p>
+            <p><strong>States Completed:</strong> <span id="resume-states-count"></span></p>
+
+            <h3>Alan's Recommended Next Challenge</h3>
+            <ul>
+                <li>🏔️ Try a 100K or 100-mile mountain ultra</li>
+                <li>🌍 Explore a race in Europe or Asia</li>
+                <li>🔥 Build toward multi-day stage races</li>
+            </ul>
+
+            <div id="resume-photo" style="margin-top: 20px;"></div>
+        </div>
     </main>
 
     <div id="alan-bubble">💬</div>
@@ -130,6 +150,7 @@
     <script src="alanai_chatbot/alan.js"></script>
     <script src="forum/inject_account_dropdown.js"></script>
     <script src="ultra_map_script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </body>
 
 </html>
